# pandas-formula

./: .gitignore  LICENSE  PLAN_extract_references.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
examples/: demo.py
src/pandas_formula/: __init__.py  engine.py
src/pandas_formula/functions/: __init__.py  aggregation.py  arithmetic.py  comparison.py  logical.py  math.py  null.py  registry.py  string.py
tests/: test_engine.py
