[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas-formula"
version = "0.3.0"
description = "A formula engine for pandas DataFrames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dr. Fengkai Yang", email = "dr.fengkai.yang@gmail.com" }
]
keywords = ["pandas", "formula", "dataframe", "dsl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/fyangcodes/pandas-formula"
Repository = "https://github.com/fyangcodes/pandas-formula"
Issues = "https://github.com/fyangcodes/pandas-formula/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pandas_formula"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
